fix overflow hidden

--- a/portfolio.css
+++ b/portfolio.css
@@ -186,7 +186,12 @@ body {
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-wrap
+{
   overflow: hidden;
+  position: relative;
 }
 
 .portfolio-item:hover {
